# flux-core

./: .uncrustify.cfg  Makefile.am  configure.ac  notes.md  shell.nix
doc/: Makefile.am  README.md  conf.py  index.rst
doc/man1/: flux-broker.rst  flux-content.rst  flux-cron.rst  flux-dmesg.rst  flux-env.rst  flux-event.rst  flux-exec.rst  flux-getattr.rst  flux-hwloc.rst  flux-jobs.rst  flux-keygen.rst  flux-kvs.rst  flux-logger.rst  flux-mini.rst  flux-module.rst  flux-ping.rst  flux-proxy.rst  flux-start.rst  flux-version.rst  flux.rst  index.rst
doc/man3/: JSON_PACK.rst  JSON_UNPACK.rst  flux_attr_get.rst  flux_aux_set.rst  flux_child_watcher_create.rst  flux_content_load.rst  flux_core_version.rst  flux_event_decode.rst  flux_event_publish.rst  flux_event_subscribe.rst  flux_fatal_set.rst  flux_fd_watcher_create.rst  flux_flags_set.rst  flux_future_and_then.rst  flux_future_create.rst  flux_future_get.rst  flux_future_wait_all_create.rst  flux_get_rank.rst  flux_get_reactor.rst  flux_handle_watcher_create.rst  flux_idle_watcher_create.rst  flux_kvs_commit.rst  flux_kvs_copy.rst  flux_kvs_getroot.rst  flux_kvs_lookup.rst  flux_kvs_namespace_create.rst  flux_kvs_txn_create.rst  flux_log.rst  flux_msg_cmp.rst  flux_msg_encode.rst  flux_msg_handler_addvec.rst  flux_msg_handler_create.rst  flux_open.rst  flux_periodic_watcher_create.rst  flux_pollevents.rst  flux_reactor_create.rst  flux_reactor_now.rst  flux_recv.rst  flux_request_decode.rst  flux_request_encode.rst  (+28 more)
doc/man5/: flux-config-bootstrap.rst
doc/man7/: flux-broker-attributes.rst
etc/: gen-cmdhelp.pl  rc1  rc3
etc/rc1.d/: 01-enclosing-instance
scripts/: check-format  format
src/bindings/lua/: flux-lua.c  jansson-lua.c  zmsg-lua.c  zmsg-lua.h
src/bindings/lua/tests/: json-test.c  zmsg-test.c
src/bindings/python/flux/: job.py  kvs.py  message.py
src/bindings/python/flux/core/: handle.py
src/broker/: attr.c  boot_pmi.c  broker.c  content-cache.c  hello.c  log.c  modservice.c  module.c  overlay.c  ping.c  publisher.c  reduce.c  reduce.h  runlevel.c  rusage.c
src/broker/test/: heartbeat.c  reduce.c  shutdown.c
src/cmd/: Makefile.am  cmdhelp.c  flux-aggregate.c  flux-bootstrap.py  flux-comms.c  flux-event.c  flux-exec.c  flux-job.c  flux-jobspec  flux-keygen.c  flux-kvs.c  flux-logger.c  flux-mini.py  flux-module.c  flux-ping.c  flux-simulator.py  flux-start.c  flux.c
src/cmd/builtin/: attr.c  content.c  dmesg.c  env.c  heaptrace.c  help.c  hwloc.c  proxy.c  python.c  user.c  version.c
src/common/libaggregate/: aggregate.c  aggregate.h
src/common/libeventlog/: eventlog.c
src/common/libflux/: attr.c  barrier.c  composite_future.c  conf.c  connector.h  ev_buffer_read.c  ev_buffer_read.h  ev_buffer_write.h  ev_flux.c  ev_flux.h  event.c  flog.h  future.c  handle.c  handle.h  message.c  message.h  mrpc.c  mrpc.h  msg_handler.c  reactor.c  reactor.h  rpc.c  tagpool.c
src/common/libflux/test/: attr.c  future.c  handle.c  log.c  message.c  module_fake2.c  mrpc.c  reactor.c  reactor_loop.c  rpc.c  rpc_chained.c  rpc_security.c  util.c  version.c
src/common/libidset/: idset_encode.c
src/common/libidset/test/: idset.c
src/common/libjob/: job.c  sign_none.c
src/common/libjob/test/: job.c
src/common/libkvs/: kvs_dir.c  kvs_lookup.c  kvs_txn.c  treeobj.c
src/common/libkvs/test/: kvs_dir.c  treeobj.c
src/common/liboptparse/: optparse.c  optparse.h
src/common/liboptparse/test/: optparse.c
src/common/libpmi/: pmi.c  pmi.h  pmi2.c  pmi2.h  simple_client.c  simple_server.c  simple_server.h
src/common/libpmi/test/: clique.c  kvstest.c  pminfo.c  simple.c  single.c  wrap.c
src/common/libschedutil/: alloc.c  ops.c
src/common/libsubprocess/: command.c  local.c  remote.c  server.c  subprocess.c  subprocess.h
src/common/libutil/: blobref.c  cf.c  cleanup.c  cleanup.h  cronodate.c  dirwalk.c  ev_zmq.h  fdutils.c  fluid.c  fsd.c  ipaddr.c  iterators.h  log.h  lru_cache.c  mn_wordlist.c  monotime.c  oom.h  popen2.c  stdlog.h  tomltk.c  xzmalloc.h  zsecurity.c
src/common/libutil/test/: aux.c  cf.c  dirwalk.c  ev.c  fdutils.c  fsd.c  kary.c  sha1.c  sha256.c  stdlog.c  tomltk.c  unlink.c  wallclock.c  zsecurity.c
src/connectors/local/: local.c
src/connectors/loop/: loop.c
src/connectors/ssh/: ssh.c
src/modules/: Makefile.am
src/modules/aggregator/: aggregator.c
src/modules/barrier/: barrier.c
src/modules/connector-local/: local.c
src/modules/content-sqlite/: content-sqlite.c
src/modules/cron/: cron.c  datetime.c  entry.h  event.c  interval.c  task.c  types.c
src/modules/job-exec/: job-exec.c  rset.c
src/modules/job-exec/test/: rset.c
src/modules/job-info/: job-info.c  watch.c
src/modules/job-ingest/: job-ingest.c  validate.c  worker.c
src/modules/job-manager/: alloc.c  event.c  job-manager.c  job.h  list.c  priority.c  queue.c  raise.c  start.c  submit.c
src/modules/job-manager/test/: job.c  queue.c  submit.c
src/modules/kvs/: cache.c  kvs.c  kvsroot.c  kvstxn.c  lookup.c  treq.c
src/modules/kvs-watch/: kvs-watch.c
src/modules/kvs/test/: kvsroot.c  kvssync.c  kvstxn.c  lookup.c
src/modules/pymod/: Makefile.am  py_mod.c
src/modules/sched-simple/: libjj.c  rlist.c  sched.c
src/modules/sched-simple/test/: rlist.c
src/modules/userdb/: userdb.c
src/modules/wreck/: wrexecd.c
src/test/: relnotes.sh  sched-bench.sh  travis_run.sh
src/test/docker/: docker-run-checks.sh
t/: Makefile.am  t0021-flux-jobspec.t  t9000-simulation.t  test-terminal.perl
t/barrier/: tbarrier.c
t/ingest/: fake-validate.sh  job-manager-dummy.c  submitbench.c
t/job-attach/: outputsleep.sh
t/job-exec/: dummy.sh
t/job-manager/: sched-dummy.c
t/kvs/: commit.c  commit_order.c  dtree.c  fence_api.c  hashtest.c  setrootevents.c  torture.c  transactionmerge.c
t/module/: parent.c
t/mpi/: hello.c
t/reactor/: reactorcat.c
t/request/: req.c  treq.c
t/valgrind/: valgrind-workload.sh
