MAN_FILES = $(MAN1_FILES) $(MAN3_FILES) $(MAN5_FILES) $(MAN7_FILES)

#######
# Man 1
#######

MAN1_FILES = $(MAN1_FILES_PRIMARY) $(MAN1_FILES_SECONDARY)

MAN1_FILES_PRIMARY = \
	man/flux.1 \
	man/flux-broker.1 \
	man/flux-kvs.1 \
	man/flux-keygen.1 \
	man/flux-logger.1 \
	man/flux-ping.1 \
	man/flux-start.1 \
	man/flux-module.1 \
	man/flux-exec.1 \
	man/flux-env.1 \
	man/flux-getattr.1 \
	man/flux-dmesg.1 \
	man/flux-content.1 \
	man/flux-hwloc.1 \
	man/flux-proxy.1 \
	man/flux-cron.1 \
	man/flux-event.1 \
	man/flux-mini.1 \
	man/flux-version.1 \
	man/flux-jobs.1

# These files are generated as clones of a primary page.
# Sphinx handles this automatically if declared in the conf.py
MAN1_FILES_SECONDARY = \
	man/flux-setattr.1 \
	man/flux-lsattr.1


MAN3_FILES = $(MAN3_FILES_PRIMARY) $(MAN3_FILES_SECONDARY)

MAN3_FILES_PRIMARY = \
	man/flux_shell_task_channel_subscribe.3 \
	man/flux_shell_add_completion_ref.3 \
	man/flux_shell_add_event_context.3 \
	man/flux_shell_add_event_handler.3 \
	man/flux_shell_aux_set.3 \
	man/flux_shell_current_task.3 \
	man/flux_shell_get_flux.3 \
	man/flux_shell_get_info.3 \
	man/flux_shell_getenv.3 \
	man/flux_shell_getopt.3 \
	man/flux_shell_killall.3 \
	man/flux_shell_log.3 \
	man/flux_shell_plugstack_call.3 \
	man/flux_shell_rpc_pack.3 \
	man/flux_shell_service_register.3 \
	man/flux_shell_task_get_info.3 \
	man/flux_shell_task_subprocess.3 \
	man/flux_open.3 \
	man/flux_send.3 \
	man/flux_recv.3 \
	man/flux_requeue.3 \
	man/flux_aux_set.3 \
	man/flux_flags_set.3 \
	man/flux_fatal_set.3 \
	man/flux_event_subscribe.3 \
	man/flux_event_publish.3 \
	man/flux_pollevents.3 \
	man/flux_msg_encode.3 \
	man/flux_rpc.3 \
	man/flux_get_rank.3 \
	man/flux_attr_get.3 \
	man/flux_get_reactor.3 \
	man/flux_reactor_create.3 \
	man/flux_fd_watcher_create.3 \
	man/flux_watcher_start.3 \
	man/flux_zmq_watcher_create.3 \
	man/flux_handle_watcher_create.3 \
	man/flux_timer_watcher_create.3 \
	man/flux_periodic_watcher_create.3 \
	man/flux_idle_watcher_create.3 \
	man/flux_msg_handler_create.3 \
	man/flux_msg_cmp.3 \
	man/flux_msg_handler_addvec.3 \
	man/flux_child_watcher_create.3 \
	man/flux_signal_watcher_create.3 \
	man/flux_stat_watcher_create.3 \
	man/flux_respond.3 \
	man/flux_reactor_now.3 \
	man/flux_request_decode.3 \
	man/flux_event_decode.3 \
	man/flux_response_decode.3 \
	man/flux_request_encode.3 \
	man/flux_content_load.3 \
	man/flux_log.3 \
	man/flux_future_get.3 \
	man/flux_future_create.3 \
	man/flux_future_wait_all_create.3 \
	man/flux_future_and_then.3 \
	man/flux_kvs_lookup.3 \
	man/flux_kvs_commit.3 \
	man/flux_kvs_txn_create.3 \
	man/flux_kvs_namespace_create.3 \
	man/flux_kvs_getroot.3 \
	man/flux_kvs_copy.3 \
	man/flux_core_version.3 \
	man/idset_create.3 \
	man/idset_encode.3

# These files are generated as clones of a primary page.
# Sphinx handles this automatically if declared in the conf.py
MAN3_FILES_SECONDARY = \
	man/flux_shell_remove_completion_ref.3 \
	man/flux_shell_aux_get.3 \
	man/flux_shell_task_first.3 \
	man/flux_shell_task_next.3 \
	man/flux_shell_info_unpack.3 \
	man/flux_shell_get_rank_info.3 \
	man/flux_shell_rank_info_unpack.3 \
	man/flux_shell_get_environ.3 \
	man/flux_shell_setenvf.3 \
	man/flux_shell_unsetenv.3 \
	man/flux_shell_getopt_unpack.3 \
	man/flux_shell_setopt.3 \
	man/flux_shell_setopt_pack.3 \
	man/flux_shell_err.3 \
	man/flux_shell_fatal.3 \
	man/flux_shell_log_setlevel.3 \
	man/flux_shell_task_info_unpack.3 \
	man/flux_shell_task_cmd.3 \
	man/flux_clone.3 \
	man/flux_close.3 \
	man/flux_requeue_nocopy.3 \
	man/flux_aux_get.3 \
	man/flux_flags_unset.3 \
	man/flux_flags_get.3 \
	man/flux_fatal_error.3 \
	man/FLUX_FATAL.3 \
	man/flux_event_unsubscribe.3 \
	man/flux_event_publish_pack.3 \
	man/flux_event_publish_raw.3 \
	man/flux_event_publish_get_seq.3 \
	man/flux_pollfd.3 \
	man/flux_msg_decode.3 \
	man/flux_get_size.3 \
	man/flux_attr_set.3 \
	man/flux_set_reactor.3 \
	man/flux_reactor_destroy.3 \
	man/flux_reactor_run.3 \
	man/flux_reactor_stop.3 \
	man/flux_reactor_stop_error.3 \
	man/flux_reactor_active_incref.3 \
	man/flux_reactor_active_decref.3 \
	man/flux_fd_watcher_get_fd.3 \
	man/flux_watcher_stop.3 \
	man/flux_watcher_destroy.3 \
	man/flux_watcher_next_wakeup.3 \
	man/flux_zmq_watcher_get_zsock.3 \
	man/flux_handle_watcher_get_flux.3 \
	man/flux_timer_watcher_reset.3 \
	man/flux_periodic_watcher_reset.3 \
	man/flux_prepare_watcher_create.3 \
	man/flux_check_watcher_create.3 \
	man/flux_msg_handler_destroy.3 \
	man/flux_msg_handler_start.3 \
	man/flux_msg_handler_stop.3 \
	man/flux_msg_handler_delvec.3 \
	man/flux_child_watcher_get_rpid.3 \
	man/flux_child_watcher_get_rstatus.3 \
	man/flux_signal_watcher_get_signum.3 \
	man/flux_stat_watcher_get_rstat.3 \
	man/flux_respond_raw.3 \
	man/flux_respond_pack.3 \
	man/flux_respond_error.3 \
	man/flux_reactor_now_update.3 \
	man/flux_request_unpack.3 \
	man/flux_request_decode_raw.3 \
	man/flux_event_unpack.3 \
	man/flux_event_encode.3 \
	man/flux_event_pack.3 \
	man/flux_event_encode_raw.3 \
	man/flux_event_decode_raw.3 \
	man/flux_response_decode_raw.3 \
	man/flux_response_decode_error.3 \
	man/flux_request_encode_raw.3 \
	man/flux_content_load_get.3 \
	man/flux_content_store.3 \
	man/flux_content_store_get.3 \
	man/flux_vlog.3 \
	man/flux_log_set_appname.3 \
	man/flux_log_set_procid.3 \
	man/flux_future_then.3 \
	man/flux_future_wait_for.3 \
	man/flux_future_reset.3 \
	man/flux_future_destroy.3 \
	man/flux_future_fulfill.3 \
	man/flux_future_fulfill_error.3 \
	man/flux_future_fulfill_with.3 \
	man/flux_future_aux_set.3 \
	man/flux_future_aux_get.3 \
	man/flux_future_set_flux.3 \
	man/flux_future_get_flux.3 \
	man/flux_future_wait_any_create.3 \
	man/flux_future_push.3 \
	man/flux_future_first_child.3 \
	man/flux_future_next_child.3 \
	man/flux_future_get_child.3 \
	man/flux_future_or_then.3 \
	man/flux_future_continue.3 \
	man/flux_future_continue_error.3 \
	man/flux_rpc_pack.3 \
	man/flux_rpc_raw.3 \
	man/flux_rpc_message.3 \
	man/flux_rpc_get.3 \
	man/flux_rpc_get_unpack.3 \
	man/flux_rpc_get_raw.3 \
	man/flux_kvs_lookupat.3 \
	man/flux_kvs_lookup_get.3 \
	man/flux_kvs_lookup_get_unpack.3 \
	man/flux_kvs_lookup_get_raw.3 \
	man/flux_kvs_lookup_get_dir.3 \
	man/flux_kvs_lookup_get_treeobj.3 \
	man/flux_kvs_lookup_get_symlink.3 \
	man/flux_kvs_getroot_get_treeobj.3 \
	man/flux_kvs_getroot_get_blobref.3 \
	man/flux_kvs_getroot_get_sequence.3 \
	man/flux_kvs_getroot_get_owner.3 \
	man/flux_kvs_getroot_cancel.3 \
	man/flux_kvs_fence.3 \
	man/flux_kvs_commit_get_treeobj.3 \
	man/flux_kvs_commit_get_sequence.3 \
	man/flux_kvs_txn_destroy.3 \
	man/flux_kvs_txn_put.3 \
	man/flux_kvs_txn_pack.3 \
	man/flux_kvs_txn_vpack.3 \
	man/flux_kvs_txn_mkdir.3 \
	man/flux_kvs_txn_unlink.3 \
	man/flux_kvs_txn_symlink.3 \
	man/flux_kvs_txn_put_raw.3 \
	man/flux_kvs_namespace_remove.3 \
	man/flux_kvs_move.3 \
	man/flux_core_version_string.3 \
	man/idset_destroy.3 \
	man/idset_decode.3 \
	man/idset_ndecode.3 \
	man/idset_format_map.3 \
	man/idset_set.3 \
	man/idset_clear.3 \
	man/idset_first.3 \
	man/idset_next.3 \
	man/idset_count.3 \
	man/idset_equal.3

MAN5_FILES = $(MAN5_FILES_PRIMARY)

MAN5_FILES_PRIMARY = \
	man/flux-config-bootstrap.5

MAN7_FILES = $(MAN7_FILES_PRIMARY)

MAN7_FILES_PRIMARY = \
	man/flux-broker-attributes.7


RST_FILES  = $(MAN1_FILES_PRIMARY:man/%.1=man1/%.rst)
	$(MAN3_FILES_PRIMARY:man/%.3=man3/%.rst) \
	$(MAN5_FILES_PRIMARY:man/%.5=man5/%.rst) \
	$(MAN7_FILES_PRIMARY:man/%.7=man7/%.rst)

if ENABLE_DOCS
dist_man_MANS = $(MAN1_FILES) $(MAN3_FILES) $(MAN5_FILES) $(MAN7_FILES)
$(RST_FILES): man1/NODESET.rst \
	man3/JSON_PACK.rst \
	man3/JSON_UNPACK.rst
endif

SUFFIXES = .rst .1 .3 .5 .7

$(MAN_FILES): $(RST_FILES)
	$(AM_V_GEN) $(PYTHON) -m sphinx -M man ./ ./

EXTRA_DIST = \
	$(RST_FILES) \
	man1/NODESET.rst \
	man3/JSON_PACK.rst \
	man3/JSON_UNPACK.rst

CLEANFILES = $(MAN_FILES)
